# radicalfieldpp

./: CMakeLists.txt  LICENSE  README.md
include/radicalfield/: quadraticelement2.hpp  quadraticelement235.hpp
